# pathtracer

./: .gitignore  Cargo.toml  Readme.md  build.rs  settings.toml
resources/shaders/: present.frag  present.vert
src/: bvh.rs  camera.rs  gl.rs  main.rs  material.rs  objects.rs  ray.rs  scene.rs  textures.rs
src/primitives/: aabb.rs  instance.rs  mod.rs  sphere.rs
