[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Dennis Kristiansen <denniskristiansen@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
rayon = "1.5.1"
image = { version = "0.23.14", default-features = false, features = ["png"] }
glam = "0.9.5"
rand = "0.8.4"
rand_distr = "0.4.2"
rand_xoshiro = "0.6.0"
itertools = "0.10.1"
smallvec = "1.7.0"

[profile.dev]
opt-level = 1
lto = true
debug = true

[profile.release]
opt-level = 3
lto = true
debug = false
